--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,29 @@
   </head>
 
   <body>
-    <%= yield %>
+    <header>
+      <% if customer_signed_in? %>
+      <% else %>
+        <li>
+          <%= link_to "About",about_path %>
+        </li>
+        <li>
+          <%= link_to "商品一覧",items_path %>
+        </li>
+        <li>
+          <%= link_to "新規登録",new_customer_registration_path %>
+        </li>
+        <li>
+          <%= link_to "ログイン",new_customer_session_path %>
+        </li>
+      <% end %>
+    </header>
+    <main>
+      <%= notice %>
+      <%= yield %>
+    </main>
+    <footer>
+
+    </footer>
   </body>
 </html>
