--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,50 @@
 
   <body>
     <header>
-      <% if customer_signed_in? %>
+      <% if admin_signed_in? %>
+        <% if request.fullpath.include? "/admin" %>
+          <li>
+            <%= link_to "商品一覧",admin_items_path %>
+          </li>
+          <li>
+            <%= link_to "会員一覧",admin_customers_path %>
+          </li>
+          <li>
+            <%= link_to "注文履歴一覧",admin_root_path %>
+          </li>
+          <li>
+            <%= link_to "ジャンル一覧",admin_genres_path %>
+          </li>
+          <li>
+            <%= link_to "ログアウト",destroy_admin_session_path, method: :destroy %>
+          </li>
+        <% else %>
+          <li>
+            <%= link_to "マイページ",customer_path %>
+          </li>
+          <li>
+            <%= link_to "商品一覧",items_path %>
+            </li>
+          <li>
+            <%=link_to "カート",cart_items_path %>
+          </li>
+          <li>
+            <%= link_to "ログアウト",destroy_customer_session_path, method: :destroy %>
+          </li>
+        <% end %>
+      <% elsif customer_signed_in? %>
+          <li>
+            <%= link_to "マイページ",customer_path %>
+          </li>
+          <li>
+            <%= link_to "商品一覧",items_path %>
+            </li>
+          <li>
+            <%=link_to "カート",cart_items_path %>
+          </li>
+          <li>
+            <%= link_to "ログアウト",destroy_customer_session_path, method: :destroy %>
+          </li>
       <% else %>
         <li>
           <%= link_to "About",about_path %>
