--- a/app/views/admin/genres/create.html.erb
+++ b/app/views/admin/genres/create.html.erb
@@ -1,2 +1,4 @@
 <h1>Admin::Genres#create</h1>
 <p>Find me in app/views/admin/genres/create.html.erb</p>
+<h4>商品画像</h4>
+<%= f.file_field :image,accept:"image/*" %>
