--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -4,9 +4,11 @@
     <tr>
       <th>商品ID</th>
       <th>商品名</th>
+      <th></th>
       <th>税抜価格</th>
       <th>ジャンル</th>
       <th>ステータス</th>
+      <th colspan = "6"></th>
     </tr>
   </thead>
 
