--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -1,7 +1,22 @@
 <h2>商品新規登録</h2>
-<%= form_with do |f| %>
-    <p>
-    
-    </p>
-    <%= f.submit %>
+<%= form_with model: @item do |f| %>
+    <h4>商品画像</h4>
+        <%= f.file_field :item_photo, accept: "image/*" %>
+
+    <h4>商品名</h4>
+        <%= f.text_field :name,placeholder: "商品名" %>
+
+    <h4>商品説明</h4>
+        <%= f.text_area :introduction,placeholder: "ここに説明文を記述します" %>
+
+    <h4>ジャンル</h4>
+        <%=f.select :genre_id, Item.genres_id.keys.map {|k| [I18n.t("enumus.genre.name.#{k}"), k]} %>
+
+    <h4>税抜価格</h4>
+        <%= f.text_field :price,placeholder: "1000" %> 円
+
+    <h4>販売ステータス</h4>
+
+
+   <%= f.submit '新規登録' %>
 <% end %>
