--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -1,2 +1,27 @@
-<h1>Admin::Customers#index</h1>
-<p>Find me in app/views/admin/customers/index.html.erb</p>
+<h2>会員一覧</h2>
+<table>
+  <thead>
+    <tr>
+      <th>会員ID</th>
+      <th>氏名</th>
+      <th></th>
+      <th>メールアドレス</th>
+      <th>ステータス</th>
+      <th colspan = "5"></th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @items.each do |item| %>
+      <tr>
+        <td><%= customer.id %></td>
+        <td><%= customer.name %></td>
+        <td></td>
+        <td><%= customer.email %></td>
+        <td><%= customer.is_deleted %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+<!--↓ページネーションを表示させるための記述-->
+<%= paginate @items %>
