--- a/app/views/admin/items/edit.html.erb
+++ b/app/views/admin/items/edit.html.erb
@@ -1,2 +1,27 @@
-<h1>Admin::Items#edit</h1>
-<p>Find me in app/views/admin/items/edit.html.erb</p>
+<h2>商品編集</h2>
+<%= form_with model: @itemf do |f| %>
+<div>
+  <label>商品画像</label>
+</div>
+<div>
+  <label>商品名</label>
+  <%= f.text_field :name %>
+</div>
+<div>
+  <label>商品説明</label>
+  <%= f.text_area :introduction %>
+</div>
+<div>
+  <label>ジャンル</label>
+</div>
+<div>
+  <label>税抜価格</label>
+  <%= f.text_field :price %> 円
+</div>
+<div>
+  <label>販売ステータス</label>
+</div>
+<div>
+  <%= f.submit "変更を保存", class: 'btn btn-success' %>
+</div>
+<% end %>
