--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -1,2 +1,11 @@
-<h1>Admin::Items#show</h1>
-<p>Find me in app/views/admin/items/show.html.erb</p>
+<h2>商品詳細</h2>
+<table>
+    <td></td>
+    <td>商品名</td>
+    <td>商品説明</td>
+    <td>ジャンル</td>
+    <td>税込価格（税抜価格）</td>
+    <td>販売ステータス</td>
+    <%= link_to "編集する",edit_admin_item_path(@itemf),class: 'btn btn-sm btn-success' %>
+
+</table>
