--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -1,2 +1,9 @@
-<h1>Admin::Genres#index</h1>
-<p>Find me in app/views/admin/genres/index.html.erb</p>
+<h2>ジャンル一覧・追加</h2>
+<table>
+  <tbody>
+    <tr>
+      <% @genre.items.each do |item| %>
+      <% end %>
+    </tr>
+  </tbody>
+</table>
