--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,8 +12,7 @@
 
   <body>
     <header>
-      <% if admin_signed_in? %>
-        <% if request.fullpath.include? "/admin" %>
+      <% if request.fullpath.include?("/admin")  &&  admin_signed_in? %>
           <li>
             <%= link_to "商品一覧",admin_items_path %>
           </li>
@@ -27,25 +26,11 @@
             <%= link_to "ジャンル一覧",admin_genres_path %>
           </li>
           <li>
-            <%= link_to "ログアウト",destroy_admin_session_path, method: :destroy %>
+            <%= link_to "ログアウト",destroy_admin_session_path, method: :delete %>
           </li>
-        <% else %>
-          <li>
-            <%= link_to "マイページ",customer_path %>
-          </li>
-          <li>
-            <%= link_to "商品一覧",items_path %>
-            </li>
-          <li>
-            <%=link_to "カート",cart_items_path %>
-          </li>
-          <li>
-            <%= link_to "ログアウト",destroy_customer_session_path, method: :destroy %>
-          </li>
-        <% end %>
       <% elsif customer_signed_in? %>
           <li>
-            <%= link_to "マイページ",customer_path %>
+            <%= link_to "マイページ",customer_path(current_customer) %>
           </li>
           <li>
             <%= link_to "商品一覧",items_path %>
@@ -54,7 +39,7 @@
             <%=link_to "カート",cart_items_path %>
           </li>
           <li>
-            <%= link_to "ログアウト",destroy_customer_session_path, method: :destroy %>
+            <%= link_to "ログアウト",destroy_customer_session_path, method: :delete %>
           </li>
       <% else %>
         <li>
