--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -1,4 +1,5 @@
-<h2>商品新規登録</h2>
+<h4>test_createで導入する方法は質問する</h4>
+<h4>商品新規登録</h4>
 <%= form_with model: @item do |f| %>
     <h4>商品画像</h4>
         <%= f.file_field :item_photo, accept: "image/*" %>
@@ -10,12 +11,13 @@
         <%= f.text_area :introduction,placeholder: "ここに説明文を記述します" %>
 
     <h4>ジャンル</h4>
-        <%=f.select :genre_id, Item.genres_id.keys.map {|k| [I18n.t("enumus.genre.name.#{k}"), k]} %>
+    <!--プルダウンリストで選択する-->
 
     <h4>税抜価格</h4>
         <%= f.text_field :price,placeholder: "1000" %> 円
 
     <h4>販売ステータス</h4>
+    <!--ラジオボタンで「販売中」「販売停止中」を選べるようにする-->
 
 
    <%= f.submit '新規登録' %>
