--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -1,24 +1,37 @@
 <h4>test_createで導入する方法は質問する</h4>
 <h4>商品新規登録</h4>
-<%= form_with model: @item do |f| %>
-    <h4>商品画像</h4>
-        <%= f.file_field :item_photo, accept: "image/*" %>
+<!--local: ture→通常のHTTPリクエストし、ページ全体をリロードさせるコマンド？-->
+    <%= form_with model: @item,url:admin_items_path,local:true do |f| %>
+        <div>
+            <%= f.label :item_photo,"商品画像" %>
+            <%= f.file_field :item_photo, accept: "image/*" %>
+        </div>
+        <div>
+            <%= f.label :name,"商品名" %>
+            <%= f.text_field :name,placeholder: "商品名" %>
+        </div>
+        <div>
+            <%= f.label :introduction,"商品説明" %>
+            <%= f.text_area :introduction,placeholder: "ここに説明文を記述します" %>
+        </div>
+        <div>
+            <%= f.label :genre_id,"ジャンル" %>
+            <!--プルダウンリストで選択する-->
+            <%= f.select :genre_id, [["ケーキ",1], ["プリン",2], ["焼き菓子",3], ["キャンディ",4]], include_blank: "--選択してください--" %>
+        </div>
+        <div>
+            <%= f.label :price,"税抜価格" %>
+            <%= f.text_field :price,placeholder: "1000" %> 円
+        </div>
+        <div>
+            <%= f.label :is_active,"販売ステータス" %>
+            <!--ラジオボタンで「販売中」「販売停止中」を選べるようにする-->
+            <%= f.radio_button :is_active, :false, checked: true %>
+            <%= f.label :is_active, "販売中", {value: :false, style:"display: inline-block"} %>
 
-    <h4>商品名</h4>
-        <%= f.text_field :name,placeholder: "商品名" %>
+            <%= f.radio_button :is_active, :true %>
+            <%= f.label :is_active, "売切れ", {value: :true, style:"display: inline-block"} %>
+        </div>
 
-    <h4>商品説明</h4>
-        <%= f.text_area :introduction,placeholder: "ここに説明文を記述します" %>
-
-    <h4>ジャンル</h4>
-    <!--プルダウンリストで選択する-->
-
-    <h4>税抜価格</h4>
-        <%= f.text_field :price,placeholder: "1000" %> 円
-
-    <h4>販売ステータス</h4>
-    <!--ラジオボタンで「販売中」「販売停止中」を選べるようにする-->
-
-
-   <%= f.submit '新規登録' %>
-<% end %>
+        <%= f.submit '新規登録' %>
+    <% end %>
