--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -6,7 +6,6 @@
       <th></th>
       <th>商品ID</th>
       <th>商品名</th>
-      <th></th>
       <th>税抜価格</th>
       <th>ジャンル</th>
       <th>ステータス</th>
@@ -18,8 +17,8 @@
     <% @items.each do |item| %>
       <tr>
         <td>
-          <% if @item.item_photo.attached? %>
-            <%= image_tag item.item_photo, size:"200×200" %>
+          <% if item.image.attached? %>
+            <%= image_tag item.image,size: "200×200" %>
           <% else %>
             <%= image_tag 'no_image',size: "200×200" %>
           <% end %>
@@ -27,8 +26,15 @@
         <td><%= item.id %></td>
         <td><%= item.name %></td>
         <td><%= item.price %></td>
-        <td><%= item.genre.id %></td>
-        <td><%= item.is_active %></td>
+        <td><%= item.genre.name %></td>
+        <td>
+          <% if item.is_active == false %>
+            販売中
+          <% else %>
+            売切れ
+          <% end %>
+
+        </td>
       </tr>
     <% end %>
   </tbody>
