--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -43,5 +43,5 @@
             <%= f.label :is_active, "売切れ", {value: :true, style:"display: inline-block"} %>
         </div>
 
-        <%= f.submit '新規登録' %>
+        <%= f.submit '新規登録', class:'btn btn-lg btn-success' %>
     <% end %>
