--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -1,11 +1,36 @@
-<h2>商品詳細</h2>
-<table>
-    <td></td>
-    <td>商品名</td>
-    <td>商品説明</td>
-    <td>ジャンル</td>
-    <td>税込価格（税抜価格）</td>
-    <td>販売ステータス</td>
-    <%= link_to "編集する",edit_admin_item_path(@itemf),class: 'btn btn-sm btn-success' %>
-
-</table>
+<div class = "container">
+    <div class = "row">
+      <h4>商品詳細</h4>
+        <table>
+            <td><%= image_tag @itemf.get_item_image(100,100) %></td>
+            <td>
+                <label>商品名</label>
+                <%= @itemf.name %>
+            </td>
+            <td>
+                <label>商品説明</label>
+                <%= @itemf.introduction %>
+            </td>
+            <td>
+                <labe>ジャンル</labe>
+                <%= @itemf.genre.name %>
+            </td>
+            <td>
+                <label>税込価格（税抜価格）</label>
+                <!--to_s(:delimited):3桁ごとにカンマ区切りで表示させるメソッド-->
+                <%= @itemf.add_tax_price.to_s(:delimited) %>(<%= @itemf.price.to_s(:delimited) %>)円
+            </td>
+            <td>
+                <label>販売ステータス</label>
+                <% if @itemf.is_active == false %>
+                    販売中
+                <% else %>
+                    売切れ
+                <% end %>
+            </td>
+            <td>
+                <%= link_to "編集する",edit_admin_item_path(@itemf.id),class: 'btn btn-lg btn-success' %>
+            </td>
+        </table>
+    </div>
+</div>
