--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -1,4 +1,4 @@
-<h4>商品新規登録</h4>
+<h4 class = "bg-light">商品新規登録</h4>
 <!--新規登録が失敗した際のエラーメッセージの表示記述-->
 <!--errors:モデルにバリデーションをかけた際にエラーの内容を確認できるメソッド。any?と組み合わせることで、エラーが発生しているかを判定できる-->
     <% if @item.errors.any? %>
