--- a/app/views/admin/items/edit.html.erb
+++ b/app/views/admin/items/edit.html.erb
@@ -1,27 +1,36 @@
-<h4>商品編集</h4>
-<%= form_with model: @itemf do |f| %>
-<div>
-  <label>商品画像</label>
+<p id = "notice"></p>
+<div class = "container">
+  <div class = "row">
+    <h5 class ="bg-light">商品編集</h5>
+  </div>
+  <div class = "row">
+    <div class = "col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+      <%= form_with model: @itemf do |f| %>
+        <div>
+          <label>商品画像</label>
+        </div>
+        <div>
+          <label>商品名</label>
+          <%= f.text_field :name %>
+        </div>
+        <div>
+          <label>商品説明</label>
+          <%= f.text_area :introduction %>
+        </div>
+        <div>
+          <label>ジャンル</label>
+        </div>
+        <div>
+          <label>税抜価格</label>
+          <%= f.text_field :price %> 円
+        </div>
+        <div>
+          <label>販売ステータス</label>
+        </div>
+        <div>
+          <%= f.submit "変更を保存", class: 'btn btn-success' %>
+        </div>
+      <% end %>
+    </div>
+  </div>
 </div>
-<div>
-  <label>商品名</label>
-  <%= f.text_field :name %>
-</div>
-<div>
-  <label>商品説明</label>
-  <%= f.text_area :introduction %>
-</div>
-<div>
-  <label>ジャンル</label>
-</div>
-<div>
-  <label>税抜価格</label>
-  <%= f.text_field :price %> 円
-</div>
-<div>
-  <label>販売ステータス</label>
-</div>
-<div>
-  <%= f.submit "変更を保存", class: 'btn btn-success' %>
-</div>
-<% end %>
