--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -1,47 +1,54 @@
-<h4 class = "bg-light">商品新規登録</h4>
-<!--新規登録が失敗した際のエラーメッセージの表示記述-->
-<!--errors:モデルにバリデーションをかけた際にエラーの内容を確認できるメソッド。any?と組み合わせることで、エラーが発生しているかを判定できる-->
-    <% if @item.errors.any? %>
-        <%= @item.errors.count %>件のエラーが発生しました
-        <ul>
-            <% @item.errors.full_messages.each do |message| %>
-                <li><%= message %></li>
+<div class = "container">
+    <div class = "row">
+        <h4 class = "bg-light">商品新規登録</h4>
+        <!--新規登録が失敗した際のエラーメッセージの表示記述-->
+        <!--errors:モデルにバリデーションをかけた際にエラーの内容を確認できるメソッド。any?と組み合わせることで、エラーが発生しているかを判定できる-->
+        <% if @item.errors.any? %>
+            <%= @item.errors.count %>件のエラーが発生しました
+            <ul>
+                <% @item.errors.full_messages.each do |message| %>
+                    <li><%= message %></li>
+                <% end %>
+            </ul>
+        <% end %>
+    </div>
+    <div class = "row">
+        <div class = "col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+            <!--local: ture→通常のHTTPリクエストし、ページ全体をリロードさせるコマンド？-->
+            <%= form_with model: @item,url:admin_items_path,local:true do |f| %>
+                <div>
+                    <%= f.label :image,"商品画像" %>
+                    <%= f.file_field :image, accept: "image/*" %>
+                </div>
+                <div>
+                    <%= f.label :name,"商品名" %>
+                    <%= f.text_field :name,placeholder: "商品名" %>
+                </div>
+                <div>
+                    <%= f.label :introduction,"商品説明" %>
+                    <%= f.text_area :introduction,placeholder: "ここに説明文を記述します" %>
+                </div>
+                <div>
+                    <%= f.label :genre_id,"ジャンル" %>
+                    <!--プルダウンリストで選択する-->
+                    <%= f.select :genre_id, [["ケーキ",1], ["プリン",2], ["焼き菓子",3], ["キャンディ",4]], include_blank: "--選択してください--" %>
+                </div>
+                <div>
+                    <%= f.label :price,"税抜価格" %>
+                    <%= f.text_field :price,placeholder: "1000" %> 円
+                </div>
+                <div>
+                    <%= f.label :is_active,"販売ステータス" %>
+                    <!--ラジオボタンで「販売中」「販売停止中」を選べるようにする-->
+                    <%= f.radio_button :is_active, :false, checked: true %>
+                    <%= f.label :is_active, "販売中", {value: :false, style:"display: inline-block"} %>
+
+                    <%= f.radio_button :is_active, :true %>
+                    <%= f.label :is_active, "売切れ", {value: :true, style:"display: inline-block"} %>
+                </div>
+
+                <%= f.submit '新規登録', class:'btn btn-md btn-success' %>
             <% end %>
-        </ul>
-    <% end %>
-
-<!--local: ture→通常のHTTPリクエストし、ページ全体をリロードさせるコマンド？-->
-    <%= form_with model: @item,url:admin_items_path,local:true do |f| %>
-        <div>
-            <%= f.label :image,"商品画像" %>
-            <%= f.file_field :image, accept: "image/*" %>
         </div>
-        <div>
-            <%= f.label :name,"商品名" %>
-            <%= f.text_field :name,placeholder: "商品名" %>
-        </div>
-        <div>
-            <%= f.label :introduction,"商品説明" %>
-            <%= f.text_area :introduction,placeholder: "ここに説明文を記述します" %>
-        </div>
-        <div>
-            <%= f.label :genre_id,"ジャンル" %>
-            <!--プルダウンリストで選択する-->
-            <%= f.select :genre_id, [["ケーキ",1], ["プリン",2], ["焼き菓子",3], ["キャンディ",4]], include_blank: "--選択してください--" %>
-        </div>
-        <div>
-            <%= f.label :price,"税抜価格" %>
-            <%= f.text_field :price,placeholder: "1000" %> 円
-        </div>
-        <div>
-            <%= f.label :is_active,"販売ステータス" %>
-            <!--ラジオボタンで「販売中」「販売停止中」を選べるようにする-->
-            <%= f.radio_button :is_active, :false, checked: true %>
-            <%= f.label :is_active, "販売中", {value: :false, style:"display: inline-block"} %>
-
-            <%= f.radio_button :is_active, :true %>
-            <%= f.label :is_active, "売切れ", {value: :true, style:"display: inline-block"} %>
-        </div>
-
-        <%= f.submit '新規登録', class:'btn btn-lg btn-success' %>
-    <% end %>
+    </div>
+</div>
