--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -1,39 +1,47 @@
 <div class = "container">
     <div class = "row">
-      <h4>商品詳細</h4>
-      <div class = "left">
-        <!--get_item_image(width, height)は、app/assets/models/item.rbに定義している-->
-        <%= image_tag @itemf.get_item_image(100,100) %>
-      </div>
-        <table>
-            <td>
-                <label>商品名</label>
-                <%= @itemf.name %>
-            </td>
-            <td>
-                <label>商品説明</label>
-                <%= @itemf.introduction %>
-            </td>
-            <td>
-                <labe>ジャンル</labe>
-                <%= @itemf.genre.name %>
-            </td>
-            <td>
-                <label>税込価格（税抜価格）</label>
-                <!--to_s(:delimited):3桁ごとにカンマ区切りで表示させるメソッド-->
-                <%= @itemf.add_tax_price.to_s(:delimited) %>(<%= @itemf.price.to_s(:delimited) %>)円
-            </td>
-            <td>
-                <label>販売ステータス</label>
-                <% if @itemf.is_active == false %>
-                    販売中
-                <% else %>
-                    売切れ
-                <% end %>
-            </td>
-            <td>
-                <%= link_to "編集する",edit_admin_item_path(@itemf.id),class: 'btn btn-lg btn-success' %>
-            </td>
-        </table>
+      <h5 class ="bg-light">商品詳細</h5>
+    </div>
+    <div class = "row">
+        <div>
+            <!--get_item_image(width, height)は、app/assets/models/item.rbに定義している-->
+            <%= image_tag @itemf.get_item_image(200,200) %>
+        </div>
+    </div>
+    <div class = "row">
+        <div class = "col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+            <table>
+                <tr>
+                    <th>商品名</th>
+                    <th><%= @itemf.name %></td>
+                </tr>
+                <tr>
+                    <th>商品説明</th>
+                    <td><%= @itemf.introduction %></td>
+                </tr>
+                <tr>
+                    <th>ジャンル</th>
+                    <td><%= @itemf.genre.name %></td>
+                </tr>
+                <tr>
+                    <th>税込価格<br>(税抜価格)</th>
+                    <td>
+                        <!--to_s(:delimited):3桁ごとにカンマ区切りで表示させるメソッド-->
+                        <%= @itemf.add_tax_price.to_s(:delimited) %>(<%= @itemf.price.to_s(:delimited) %>)円
+                    </td>
+                </tr>
+                <tr>
+                    <th>販売ステータス</th>
+                    <td>
+                        <% if @itemf.is_active == false %>
+                            <div class = "text-success">販売中</div>
+                        <% else %>
+                            <div class = "text-muted">売切れ</div>
+                        <% end %>
+                    </td>
+                </tr>
+                <td><%= link_to "編集する",edit_admin_item_path(@itemf.id),class: 'btn btn-md btn-success' %></td>
+            </table>
+        </div>
     </div>
 </div>
