--- a/app/views/admin/items/edit.html.erb
+++ b/app/views/admin/items/edit.html.erb
@@ -5,27 +5,36 @@
   </div>
   <div class = "row">
     <div class = "col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
-      <%= form_with model: @itemf do |f| %>
+      <%= form_with model: @itemf,url:admin_item_path(@itemf),local:true do |f| %>
         <div>
-          <label>商品画像</label>
+          <%= f.label :image,"商品画像" %>
+          <%= f.file_field :image, accept: "image/*" %>
         </div>
         <div>
-          <label>商品名</label>
-          <%= f.text_field :name %>
+          <%= f.label :name,"商品名" %>
+          <%= f.text_field :name,placeholder: "商品名" %>
         </div>
         <div>
-          <label>商品説明</label>
-          <%= f.text_area :introduction %>
+          <%= f.label :introduction,"商品説明" %>
+          <%= f.text_area :introduction,placeholder: "ここに説明文を記述します" %>
         </div>
         <div>
-          <label>ジャンル</label>
+          <%= f.label :genre_id,"ジャンル" %>
+          <!--プルダウンリストで選択する-->
+          <%= f.select :genre_id, [["ケーキ",1], ["プリン",2], ["焼き菓子",3], ["キャンディ",4]], include_blank: "--選択してください--" %>
         </div>
         <div>
-          <label>税抜価格</label>
-          <%= f.text_field :price %> 円
+          <%= f.label :price,"税抜価格" %>
+          <%= f.text_field :price,placeholder: "1000" %> 円
         </div>
         <div>
-          <label>販売ステータス</label>
+          <%= f.label :is_active,"販売ステータス" %>
+          <!--ラジオボタンで「販売中」「販売停止中」を選べるようにする-->
+          <%= f.radio_button :is_active, :false, checked: true %>
+          <%= f.label :is_active, "販売中", {value: :false, style:"display: inline-block"} %>
+
+          <%= f.radio_button :is_active, :true %>
+          <%= f.label :is_active, "売切れ", {value: :true, style:"display: inline-block"} %>
         </div>
         <div>
           <%= f.submit "変更を保存", class: 'btn btn-success' %>
