--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -1,19 +1,28 @@
-<h2>会員一覧</h2>
-<table>
-  <thead>
-    <tr>
-      <th>会員ID</th>
-      <th>氏名</th>
-      <th></th>
-      <th>メールアドレス</th>
-      <th>ステータス</th>
-      <th colspan = "5"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-
-  </tbody>
-</table>
-<!--↓ページネーションを表示させるための記述-->
-<%= paginate @customers %>
+<div class = "container">
+  <div class = "row">
+    <h4 class = "bg-light">会員一覧</h4>
+    <table calss = "table">
+      <thead class = "bg-light">
+        <tr>
+          <th>会員ID</th>
+          <th>氏名</th>
+          <th>メールアドレス</th>
+          <th>ステータス</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @customers.each do |customer| %>
+          <tr>
+            <td><%= customer.id %></td>
+            <!--full_nameは、app/models/customers.rbで定義している-->
+            <td><%= customer.full_name %></td>
+            <td><%= customer.email %></td>
+            <td><%= customer.is_deleted %></td>
+          </tr>
+        <% end %>
+        <!--↓ページネーションを表示させるための記述-->
+        <%= paginate @customers %>
+      </tbody>
+    </table>
+  </div>
+</div>
