--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -1,2 +1,15 @@
-<h1>Admin::Customers#show</h1>
-<p>Find me in app/views/admin/customers/show.html.erb</p>
+<div class = "container">
+  <div class = "row">
+    <h5 class = "bg-light"><%= @customerf.full_name %>さんの会員詳細</h5>
+    
+    <table>
+      <tr></tr>
+      <tr></tr>
+      <tr></tr>
+      <tr></tr>
+      <tr></tr>
+      <tr></tr>
+      
+    </table>
+  </div>
+</div>
