--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -1,16 +1,34 @@
-<h4>作成中_admin#home</h4>
-<h4>注文履歴一覧</h4>
-<table>
-    <thead>
-        <tr>
-            <th>購入日時</th>
-            <th>購入者</th>
-            <th>注文個数</th>
-            <th>注文ステータス</th>
-        </tr>
-    </thead>
-    <tbody>
-        <% @orders.each do |order| %>
-        <% end %>
-    </tbody>
-</table>
+<div class = "container">
+    <div class ="row">
+        <h4 class ="bg-light">注文履歴一覧</h4>
+        <table class ="table">
+            <thead class = "bg-light">
+                <tr>
+                    <th>購入履歴</th>
+                    <th>購入者</th>
+                    <th>注文個数</th>
+                    <th>注文ステータス</th>
+                    <!--colspan:th/td要素で、この属性を指定したセルから指定された数だけ右方向にセル結合して、1つのセルとして表示する-->
+                    <!--<th colspan = "4"></th>-->
+                </tr>
+            </thead>
+            <tbody>
+                <!--<% @orders.each do |order| %>-->
+                    <tr>
+                        <td>
+                            <!--購入日時を押下することで、注文履歴詳細（更新）画面へ遷移させる-->
+                            <%= link_to admin_order_detail_path do %>
+                                orderテーブルのcreate_at/作成日時を持ってくる。その際注意点あり
+                            <% end %>
+                        </td>
+                        <td>購入者＝管理者側でいう会員氏名</td>
+                        <td></td>
+                        <td>staus/注文ステータス情報を持ってくる。その際enumの設定と文字変換機能を実装すること</td>
+                    </tr>
+                <!--<% end %>-->
+            </tbody>
+        </table>
+        <!--↓ページネーションを表示させるための記述。詳細設定は、app/view/kaminariを参照-->
+        <!--%= paginate @orders %-->
+    </div>
+</div>
