--- a/app/views/admin/order_details/update.html.erb
+++ b/app/views/admin/order_details/update.html.erb
@@ -1,2 +1,5 @@
-<h1>Admin::OrderDetails#update</h1>
-<p>Find me in app/views/admin/order_details/update.html.erb</p>
+<div class = "container">
+  <div class = "row">
+    <h4 class = "bg-light">注文履歴詳細</h4>
+  </div>
+</div>
