--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Naganocake</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -14,103 +14,109 @@
     <header>
       <nav class = "nabver navber-expand-lg navbar-dark bg-dark">
         <div class = "container">
-          <%= link_to root_path, class: 'navbar-brand navbar_mainLogo' do %>
+          <%= link_to root_path, class:'navbar-brand' do %>
+            <i class = 'fas fa-store'></i>
             <span>LOGO</span>
           <% end %>
-           <%= link_to new_admin_session_path, class: 'navbar-brand' do %>
+           <%= link_to new_admin_session_path, class:'navbar-brand' do %>
             <span>（admin_signed_in画面へ最終的には削除/レイアウトも最後に修正）</span>
           <% end %>
-
           <button class ="navbar-toggler" type ="button" data-toggle ="collapse" data-target ="#navbarNavDropdown" aria-controls ="navbarNavDropdown" aria-expanded ="false" aria-label ="Toggle navigation">
             <span class ="navbar-toggler-icon"></span>
           </button>
-
-<div class = "collapse navbar-collapse" id = "nabverNavDropdown">
-        <ul class ="navbar-nav ml-auto">
-          <% if request.fullpath.include?("/admin")  &&  admin_signed_in? %>
-            <li>
-              <%= link_to admin_items_path ,class: 'nav-link text-light' do %>
-                <!--試しにbookers2のアイコンを挿入-->
-                <i class = "fas fa-home"></i>
-                商品一覧
+          <div class = "collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class ="navbar-nav ml-auto">
+              <% if request.fullpath.include?("/admin") && admin_signed_in? %>
+                <li>
+                  <%= link_to admin_items_path ,class:'nav-link text-light' do %>
+                    <i class = "fas fa-sharp fa-solid fa-store"></i>
+                    商品一覧
+                  <% end %>
+                </li>
+                <li>
+                  <%= link_to admin_customers_path,class:'nav-link text-light' do  %>
+                    <i class = "fas fa-sharp fa-solid fa-users"></i>
+                    会員一覧
+                  <% end %>
+                </li>
+                <li>
+                  <%= link_to admin_root_path,class:'nav-link text-light' do %>
+                    <i class = 'fas fa-clipboard'></i>
+                    注文履歴一覧
+                  <% end %>
+                </li>
+                <li>
+                  <%= link_to admin_genres_path,class:'nav-link text-light' do %>
+                    <i class = 'fas fa-code-branch'></i>
+                    ジャンル一覧
+                  <% end %>
+                </li>
+                <li>
+                  <%= link_to destroy_admin_session_path,class:'nav-link text-light' ,method: :delete do %>
+                    <i class = 'fas fa-sign-out-alt'></i>
+                    ログアウト
+                  <% end %>
+                </li>
+              <% elsif customer_signed_in? %>
+                <li>
+                  <%= link_to customer_path(current_customer),class:'nav-link text-light' do %>
+                    <i class = 'fas fa-user-pen'></i>
+                    マイページ
+                  <% end %>
+                </li>
+                <li>
+                  <%= link_to items_path,class:'nav-link text-light' do %>
+                    <i class = 'fas fa-store'></i>
+                    商品一覧
+                  <% end %>
+                </li>
+                <li>
+                  <%=link_to cart_items_path,class:'nav-link text-light' do %>
+                    <i class = 'fas fa-cart-shopping'></i>
+                    カート
+                  <% end %>
+                </li>
+                <li>
+                  <%= link_to destroy_customer_session_path,class:'nav-link text-light' ,method: :delete do %>
+                    <i class = 'fas fa-sign-out-alt'></i>
+                    ログアウト
+                  <% end %>
+                </li>
+              <% else %>
+                <li>
+                  <%= link_to about_path,class:'nav-link text-light' do %>
+                    <i class = 'fas fa-link'></i>
+                    About
+                  <% end %>
+                </li>
+                <li>
+                  <%= link_to items_path,class:'nav-link text-light' do %>
+                    <i class = 'fas fa-sharp fa-solid fa-store'></i>
+                    商品一覧
+                  <% end %>
+                </li>
+                <li>
+                  <%= link_to new_customer_registration_path,class:'nav-link text-light' do %>
+                    <i class = "fas fa-user-plus"></i>
+                    新規登録
+                  <% end %>
+                </li>
+                <li>
+                  <%= link_to new_customer_session_path,class:'nav-link text-light' do %>
+                    <i class = "fas fa-sign-in-alt"></i>
+                    ログイン
+                  <% end %>
+                </li>
               <% end %>
-            </li>
-            <li>
-              <%= link_to admin_customers_path,class: 'nav-link text-light' do  %>
-                会員一覧
-              <% end %>
-            </li>
-            <li>
-              <%= link_to admin_root_path,class: 'nav-link text-light' do %>
-                注文履歴一覧
-              <% end %>
-            </li>
-            <li>
-              <%= link_to admin_genres_path,class: 'nav-link text-light' do %>
-                ジャンル一覧
-              <% end %>
-            </li>
-            <li>
-              <%= link_to destroy_admin_session_path,class: 'nav-link text-light' ,method: :delete do %>
-                ログアウト
-              <% end %>
-            </li>
-          <% elsif customer_signed_in? %>
-            <li>
-              <%= link_to customer_path(current_customer),class: 'nav-link text-light' do %>
-                マイページ
-              <% end %>
-            </li>
-            <li>
-              <%= link_to items_path,class: 'nav-link text-light' do %>
-                商品一覧
-              <% end %>
-            </li>
-            <li>
-              <%=link_to cart_items_path,class: 'nav-link text-light' do %>
-                カート
-              <% end %>
-            </li>
-            <li>
-              <%= link_to destroy_customer_session_path,class: 'nav-link text-light' ,method: :delete do %>
-                ログアウト
-              <% end %>
-            </li>
-          <% else %>
-            <li>
-              <%= link_to about_path,class: 'nav-link text-light' do %>
-                About
-              <% end %>
-            </li>
-            <li>
-              <%= link_to items_path,class: 'nav-link text-light' do %>
-                商品一覧
-              <% end %>
-            </li>
-            <li>
-              <%= link_to new_customer_registration_path,class: 'nav-link text-light' do %>
-                新規登録
-              <% end %>
-            </li>
-            <li>
-              <%= link_to new_customer_session_path,class: 'nav-link text-light' do %>
-                ログイン
-              <% end %>
-            </li>
-          <% end %>
-        </ul>
-      </div>
-
+            </ul>
+          </div>
         </div>
-
       </nav>
     </header>
     <main>
       <%= notice %>
       <%= yield %>
     </main>
-    <footer>
-
-    </footer>
+    <footer></footer>
   </body>
 </html>
