--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,3 +1,8 @@
-<h1>Public::Registrations#new</h1>
-<p>Find me in app/views/public/registrations/new.html.erb</p>
+<!--顧客側「新規会員登録画面」-->
+<div class = "container">
+  <div class = "row">
+    <!--新規会員登録ページのタイトル-->
+    <h5 class = "bg-light">新規会員登録</h5>
+  </div>
+</div>
 <%= render "public/shared/error_messages",resource: resource %>
