--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,8 +1,21 @@
 <!--顧客側「新規会員登録画面」-->
 <div class = "container">
   <div class = "row">
-    <!--新規会員登録ページのタイトル-->
-    <h5 class = "bg-light">新規会員登録</h5>
+    <!--下のdivは、Bootstrapでデザインを整えるために使用-->
+    <div>
+      <!--新規会員登録ページのタイトル-->
+      <h5 class = "bg-light">新規会員登録</h5>
+    <%= form_with model: @customer,url:new_session_path(resource_name) do |f| %>
+      <%= render "public/shared/error_messages", resource: resource %>
+      <div class = "field">
+        <!--full_nameの定義は、app/models/customer.rbを参照-->
+        <%= f.label :full_name,"氏名" %>
+      </div>
+
+      <div class = "actions">
+        <%= f.submit "新規登録", class:'btn btn-sm btn-success' %>
+      </div>
+    <% end %>
   </div>
 </div>
 <%= render "public/shared/error_messages",resource: resource %>
