--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -1,2 +1,6 @@
-<h1>Public::Customers#show</h1>
-<p>Find me in app/views/public/customers/show.html.erb</p>
+<div class = "container">
+  <div class = "row">
+    <h3>商品一覧</h3>
+    <p>（全X件）</p>
+  </div>
+</div>
