--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -1,6 +1,20 @@
 <div class = "container">
   <div class = "row">
-    <h3>商品一覧</h3>
-    <p>（全X件）</p>
+    <h5 class = "bg-light">マイページ</h5>
   </div>
+  <div class = "row">
+    <h5>登録情報</h5>
+    <%= link_to "編集する",edit_customer_path(@itemf.id),class: 'btn btn-md btn-success' %>
+  </div>
+  <div class = "row">
+    会員一覧表
+  </div>
+  <div class ="row">
+    <h5>配送先</h5>
+    <%= link_to "一覧を見る",addresses_path(@itemf.id),class: 'btn btn-md btn-primary' %>
+
+    <h5>注文経歴</h5>
+    <%= link_to "一覧を見る",orders_path(@itemf.id),class: 'btn btn-md btn-primary' %>
+  </div>
+  <div
 </div>
