--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -59,19 +59,19 @@
                 </li>
               <% elsif customer_signed_in? %>
                 <li>
-                  <%= link_to customer_path(current_customer),class:'nav-link text-light' do %>
+                  <%= link_to public_customers_path,class:'nav-link text-light' do %>
                     <i class = 'fas fa-user-pen'></i>
                     マイページ
                   <% end %>
                 </li>
                 <li>
-                  <%= link_to items_path,class:'nav-link text-light' do %>
+                  <%= link_to public_items_path,class:'nav-link text-light' do %>
                     <i class = 'fas fa-store'></i>
                     商品一覧
                   <% end %>
                 </li>
                 <li>
-                  <%=link_to cart_items_path,class:'nav-link text-light' do %>
+                  <%=link_to public_cart_items_path,class:'nav-link text-light' do %>
                     <i class = 'fas fa-cart-shopping'></i>
                     カート
                   <% end %>
@@ -90,7 +90,7 @@
                   <% end %>
                 </li>
                 <li>
-                  <%= link_to items_path,class:'nav-link text-light' do %>
+                  <%= link_to public_items_path,class:'nav-link text-light' do %>
                     <i class = 'fas fa-sharp fa-solid fa-store'></i>
                     商品一覧
                   <% end %>
