--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -29,7 +29,7 @@
   </div>
   <div class = "pull-right">
     <!--リンクは顧客側商品ができた段階で実装する。-->
-    <%= link_to items_path do %>
+    <%= link_to public_items_path do %>
       全ての商品を見る>
     <% end %>
   </div>
