--- a/app/views/public/customers/edit.html.erb
+++ b/app/views/public/customers/edit.html.erb
@@ -1,2 +1,39 @@
-<h1>Public::Customers#edit</h1>
-<p>Find me in app/views/public/customers/edit.html.erb</p>
+<p id = "notice"></p>
+<div class ="container">
+  <div class ="row">
+    <h5 class ="bg-light">会員情報編集</h5>
+  </div>
+  <div class ="row">
+    <%= form_with model: @customerf,url:public_customers_path(@customerf),local:true do |f| %>
+      <di>
+        <%= f.label      :full_name,"氏名" %>
+        <%= f.text_field :last_name ,placeholder: "姓" %>
+        <%= f.text_field :first_name,placeholder: "名" %>
+      </di>
+      <div>
+        <%= f.label :full_name_kana,"フリガナ" %>
+        <%= f.text_field :last_name_kana,placeholder: "セイ" %>
+        <%= f.text_field :first_name_kana,placeholder: "メイ"%>
+      </div>
+      <div>
+        <%= f.label :postal_code,"郵便番号" %>
+        <%= f.text_field :postal_code,placeholder: "郵便番号" %>
+      </div>
+      <div>
+        <%= f.label :address,"住所" %>
+        <!--:size=>"〇〇"でtext_fieldの大きさを調整している-->
+        <%= f.text_field :address,placeholder: "住所", :size=>"50" %>
+      </div>
+      <div>
+        <%= f.label :telephone_number,"電話番号" %>
+        <%= f.text_field :telephone_number,placeholder: "電話番号" %>
+      </div>
+      <div>
+        <%= f.label :email,"メールアドレス" %>
+        <%= f.text_field :email,placeholder: "メールアドレス", :size=>"30" %>
+      </div>
+      <div><%= f.submit "編集内容を保存",class:'btn btn-success' %></div>
+      <div>退会（ボタン化予定）</div>
+    <% end %>
+  </div>
+</div>
