--- a/app/views/public/customers/unsubscribe.html.erb
+++ b/app/views/public/customers/unsubscribe.html.erb
@@ -1,2 +1,16 @@
-<h1>Public::Customers#unsubscribe</h1>
-<p>Find me in app/views/public/customers/unsubscribe.html.erb</p>
+<div class ="container" style="margin-top:150px">
+  <!--上下左右中央揃えにするクラス-->
+  <h5 class ="text-center font-weight-bold">
+    <storong>本当に退会しますか？</storong>
+  </h5>
+  <p class ="text-center">
+    退会すると、会員登録情報や<br>
+    これまでの購入履歴情報が閲覧できなくなります。<br>
+    退会する場合は、「退会する」をクリックしてください。
+  </p>
+  <div class ="text-center">
+    <%= link_to "退会しない",public_customers_path,class:'btn btn-md btn-primary' %>
+    退会する
+  </div>
+
+</div>
