--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,7 +1,6 @@
-<div class = "container mx-auto">
-
-  <div class = "row">
-    <div>
+<div class = "container text-center" style="margin-top:30px">
+   <div class = "row">
+    <div class ="col-8 mx-auto">
       ようこそ、ながのCAKEへ！<br>
       このサイトは、ケーキ販売のECサイトになります。<br>
       会員でない方も商品閲覧はできますが、<br>
@@ -9,13 +8,13 @@
     </div>
 
   </div>
-  <div class = "row">
+  <div class = "row col-8 mx-auto">
      <h5 class = "bg-light">新着商品</h5>
   </div>
-  <div class = "row">
+  <div class = "row col-8 mx-auto">
     <!--|item|→ローカル変数を指している。格納データを１つずつ持ってきている。-->
     <!--each文の内で使用するメソッド-->
-    <div class = "d-flex justify-content-around">
+    <div class = " col d-flex justify-content-around">
       <% @items.each do |item| %>
         <div>
           <!--get_item_image(width, height)は、app/assets/models/item.rbに定義している-->
@@ -27,7 +26,7 @@
       <% end %>
     </div>
   </div>
-  <div class = "pull-right">
+  <div class = "col-10 text-right">
     <!--リンクは顧客側商品ができた段階で実装する。-->
     <%= link_to public_items_path do %>
       全ての商品を見る>
