--- a/app/views/public/customers/unsubscribe.html.erb
+++ b/app/views/public/customers/unsubscribe.html.erb
@@ -1,5 +1,5 @@
 <div class="container text-center">
-  <div class="row">
+  <div class="row d-flex">
     <div class="col-8 mx-auto">
       <h1 class="my-5"><strong>本当に退会しますか？</strong></h1>
       <div>
