--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -1,13 +1,15 @@
-<div class = "container　mx-auto">
-  <div class = "text-center">
-    <h1>About</h1>
-    <p>
-      ながのCAKEは全国発送可能なケーキ屋さんです。<br>
-      お子様からお年寄りの方までお召し上がりいただけるよう、<br>
-      様々なバリエーションをご用意しております。<br>
-      また、全国へ発送可能ですので、「いつ」でも「どこ」でもご注文いただけます。<br>
-      ぜひご注文ください。
-    </p>
+<div class = "container text-center" style="margin-top:50px">
+  <div class = "row">
+    <div class ="col-8 mx-auto">
+      <h1><storong>About</storong></h1>
+      <p>
+        ながのCAKEは全国発送可能なケーキ屋さんです。<br>
+        お子様からお年寄りの方までお召し上がりいただけるよう、<br>
+        様々なバリエーションをご用意しております。<br>
+        また、全国へ発送可能ですので、「いつ」でも「どこ」でもご注文いただけます。<br>
+        ぜひご注文ください。
+      </p>
+    </div>
   </div>
 </div>
 
