--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -1,13 +1,16 @@
-<div calss ="container text-center" style ="margin:50px">
+<div calss ="container-fluid text-center" style ="margin:50px">
   <div class ="row　mx-auto">
-    <div class="col-lg-5">
+    <div class="col-md-5">
       <!--get_item_image(width, height)は、app/assets/models/item.rbに定義している-->
       <%= image_tag @itemf.get_item_image(300,300) %>
     </div>
-    <div class ="col-lg-7">
+    <div class ="col-md-7">
       <%= @itemf.name %>
       <%= @itemf.introduction %>
       <%= @itemf.add_tax_price.to_s(:delimited) %>(税込)
+    </div>
+    <div class ="row">
+      <%= link_to "カートに入れる",public_cart_items_path,class:"btn btn-md btn-success" %>
     </div>
   </div>
 </div>
