--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -2,15 +2,17 @@
   <div class ="row　mx-auto">
     <div class="col-md-5">
       <!--get_item_image(width, height)は、app/assets/models/item.rbに定義している-->
-      <%= image_tag @itemf.get_item_image(300,300) %>
-    </div>
-    <div class ="col-md-7">
-      <%= @itemf.name %>
-      <%= @itemf.introduction %>
-      <%= @itemf.add_tax_price.to_s(:delimited) %>(税込)
-    </div>
-    <div class ="row">
-      <%= link_to "カートに入れる",public_cart_items_path,class:"btn btn-md btn-success" %>
+      <div><%= image_tag @itemf.get_item_image(300,300) %></div>
+      <div>
+        <%= @itemf.name %>
+        <%= @itemf.introduction %>
+        <%= @itemf.add_tax_price.to_s(:delimited) %>(税込)
+      </div>
+      <%= form_with model: @itemf,url:public_cart_items_path,lical:true do |f| %>
+        <%= f.hidden_field :id, :value => @itemf %>
+        <%= f.select :amount,*[1..15] %>
+        <%= f.submit 'カートに入れる', class:'btn btn-md btn-success' %>
+      <% end %>
     </div>
   </div>
 </div>
