--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -8,7 +8,7 @@
     </div>
 
   </div>
-  <div class = "row col-8 mx-auto">
+  <div class = "row col-8 mx-auto" style="margin-top:30px">
      <h5 class = "bg-light">新着商品</h5>
   </div>
   <div class = "row col-8 mx-auto">
