--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -1,2 +1,24 @@
-<h1>Public::Orders#new</h1>
-<p>Find me in app/views/public/orders/new.html.erb</p>
+<div class ="container" style="marigin:30px">
+  <div class ="row" style="margin-top:20px">
+    <h5 class ="bg-light">注文情報入力</h5>
+  </div>
+  <div class ="row">
+    <%= form_with model: @order,url:public_confilm_path,local:true,method: :confilm do |f| %>
+      <div>
+        <storng>支払方法</storng>
+        <%= f.radio_button :payment_method, Order.payment_methods.key(0) %>
+        <%= f.label :payment_method_credit_card, Order.payment_methods_i18n[:credit_card] %>
+
+        <%= f.radio_button :payment_method, Order.payment_methods.key(1) %>
+        <%= f.label :payment_method_transfer, Order.payment_methods_i18n[:transfer]%>
+      </div>
+      <div>
+        <strong>お届け先</strong>
+        <%= f.select :address_id, options_from_collection_for_select(Address.all, :id, :address_display) %>
+      </div>
+    <% end %>
+  </div>
+  <div class="row mt-5 d-flex justify-content-center">
+    <%= link_to "確認画面へ進む",public_confilm_path,class:'btn btn-md btn-primary' %>
+  </div>
+</div>
